Adding few changes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,30 @@
     </p>
 </section>
 
+<section id= "priority" >
+    <div hidden="true">
+    <label for="task">Task for comming week</label> <br>
+    <textarea name="" id="alltask0d" cols="10" rows="5" ></textarea>
+    <input id="lockDate-id" type="date" title="Datepicker" value="setDate()" >
+    <button id="lockTask" onclick="lockpriporitySection()">Lock it</button>
+    </div>
+    <div>
+        <p>
+            <h2> Task for this week</h2>
+            <ol>
+                    <li><a href="https://sites.google.com/view/sapfioribatch923/extra-credit?authuser=1" target="_blank" title="SAPUI5">SAPUI5</a></li>
+                    <li><a href="https://www.guvi.in/" target="_blank" title="Guivi">Guvi</a></li>
+                    <li><a href="https://workspace.konfinity.com/users/sign_in" target="_blank" title="konfinity">Konfinity</a></li>
+                    <li><a href="https://accounts.simplilearn.com/" target="_blank" title="SimpliLearn">SimpliLearn</a></li>
+                    <li><a href="https://www.udemy.com/" target="_blank" title="UDEMEY">UDEMEY-DataStructure</a></li>
+                    <li><a href="https://www.coursera.org/courses?query=free" target="_blank" title="coursera">Fullstack</a></li>
+                    
+            </ol>
+        </p>
+    </div>
+
+</section>
+
 <section id="Study">
     <p>
             What is to Study.
@@ -50,6 +74,14 @@
 <section id="Point to Remember">
 
 </section>
+
+<footer>
+<p>
+    Daily look these question <a href="pages/Interview.html">Tips of preperation</a>
+</p>
+
+</footer>
+
 
 
 
