Added Interview html

--- a/pages/Interview.html
+++ b/pages/Interview.html
@@ -7,6 +7,57 @@
     <title>Interview Prep</title>
 </head>
 <body>
+
+    <header>Non-Techinical</header>
+
+    <div>
+        <div><h2>What challenges you have solved in your projects so you can proud on that</h2></div>
+
+        <div>
+            <p>I took up UI development role as there was urgency in the team and I <strong> self-nominated my self</strong> for it. I learn the end to end implementation of software development which was not there earlier. It opens up a new horizon for me and I was able to concentrate on hidden or uncovered use-cases that were skipped due to limited knowledge. the blend of testing and development brought a better version of me  and I am proud of that.</p>
+        </div>
+   
+    </div>
+
+    
+    <div>
+            <div><h2>What is your approach to learn new technologies?</h2></div>
+            <div>
+                <p>To learn a new technology I first look into its quick start guide and try to relate it with anything which I would have done related to it. If I get something similar well then its brownie point and I jump into the task and start learning while doing it. I believe the best way to learn anything is to get motion. Of course, there might be hurdles but that is the best part as it allows me to get deeper into the subject.</p>
+                <p>however, if it's purely new I will still go through it quick start guide and then start working on it. I will search online discussion forum, communities on issues which would be an obstacle or rather I say the opportunity for me to dig deeper into the subject</p>
+            </div>.
+    </div>
+  
+
+
+    <div>
+                <div><h2>what was your achievements for your team?</div></h2></div>
+                <div>
+                        <p>
+                                I have been involved in the testing of Enterprise Content Management (ECM). Here we have a different solution that focused on rendering, retention, workflow, formating, and security of the document. Our sales team use to showcase the capability of the product and accordingly gets revenue generated. 
+                                </p>
+                                <p>
+                                During one of the sales meet and also the quarterly town hall meeting, I saw the numbers of clients using our solutions in graphical representation. These number where not the same for all the different solution some of them were high while other was low. I dig into the matter and did some interaction with my team to get more insight wherein I got to know that all these solutions were sold separately there was no useCase which shows that how all the solution can be integrated together to get maximum output efficiently and can get "On stop solution" related to document processing. A few of our sales guys were not familiar with each module and they pitch for module wherein they have more hold. </p>
+                                <p>
+                                The problem was clear to me, and to act on this I worked on providing useCase which can showcase every solution provided by us. I took useCase of "Opening of BankAccount" which fits with our stack of solutions. I shared a plan with the team and without disturbing the current working load of the engineering team started working on it. I took up the role of "Virtual Project manager" along with testing and moved into the execution phase. We use to discuss challenges and outcomes during lunch hours as it was mutually agreed to give 10 min from lunch hours for this. Progress was tracked in VersionOne ( project management tool). The solution was ready by 2 months and then it was time to showcase it and provide training to the Sales team.
+                                </p>
+                                <p>
+                                The sales team was impressed with the solution and it was a winning feeling for us. This got a pilot in the immediate month and the next townhall revenue showed an increment of 2%. It boosted the confidence of our sales team and we all who were involved in this came to know more about our product. This act of mine was noticed and praise. I was awarded with "Gold award" that quarter. It was helped me to be known in the company and people started knowing me for my work. 
+                                </p>
+                                <p>
+                                In the other assignment, the overall release cycle was 10 weeks while working on this I release that its because that most of the repetitive work i.e. requirement understanding, moving of development build to testing phase or staging phase was manual. Build acceptance testing was also manual. There is a lot of scopes to automate these manual task and process improvement. 
+                                </p>
+                                <p>
+                                I took this as a challenge and started working over it in phase. In phase 1 my target was to the automated manual testing effort, quickly I started looking over the open-source test framework and developed POC. This POC was plugged into the testing environment and moved into execution. The overall testing time reduced from 6 hrs to 1 hour. I did train my team members on how to maintain this framework and worked on it. I provided support and mentored them for a few weeks till they were comfortable with it and can now execute, modify, and create new test cases on top of it. 
+                                </p>
+                                <p>
+                                 In the next phase, I hooked this framework with Jenkins which is continuous integration tools and helps to create an unattended task (jobs) which trigger at certain timeFrame as configured. It was resultant to execute the test cases in non-working hours and by the time the test team comes to the office they had execution results. 
+                                </p>
+                                <p>
+                                The result was shared in email so that everyone who is part of the DL can view it and a responsible team member can act on failure. It reduced the overall cycle time to 7 weeks. 
+                                </p>
+                </div>
+     </div>
     
     <footer>
         <p><a href="../index.html">Main Page</a></p>
