Added new branch and css basic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <H1>What <em>I</em> normally do on web </H1>
 
     
-    <section id="Emails">
+    <section id="Emails" class="sectionClass">
     <p>
         Lets check my emails.
         <ul>
@@ -25,7 +25,7 @@
     </p>
 </section>
 
-<section id= "priority" >
+<section id= "priority" class="sectionClass">
     <div hidden="true">
     <label for="task">Task for comming week</label> <br>
     <textarea name="" id="alltask0d" cols="10" rows="5" ></textarea>
@@ -49,7 +49,7 @@
 
 </section>
 
-<section id="Study">
+<section id="Study" class="sectionClass">
     <p>
             What is to Study.
             <ul>
