--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2> Task for this week</h2>
             <ol>
                     <li><a href="https://sites.google.com/view/sapfioribatch923/extra-credit?authuser=1" target="_blank" title="SAPUI5">SAPUI5</a></li>
-                    <li><a href="https://www.guvi.in/" target="_blank" title="Guivi">Guvi</a></li>
+                    <!-- <li><a href="https://www.guvi.in/" target="_blank" title="Guivi">Guvi</a></li> -->
                     <li><a href="https://workspace.konfinity.com/users/sign_in" target="_blank" title="konfinity">Konfinity</a></li>
                     <li><a href="https://accounts.simplilearn.com/" target="_blank" title="SimpliLearn">SimpliLearn</a></li>
                     <li><a href="https://www.udemy.com/" target="_blank" title="UDEMEY">UDEMEY-DataStructure</a></li>
