--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
           <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" title="Office Email"> Office Email</a></li>
           <li><a href="https://mail.google.com/mail/u/1/#inbox" target="_blank" title="Personal Gmail"> Personal Gmail</a></li>
           <li><a href="https://mail.google.com/mail/u/2/#inbox" target="_blank" title="Study Email">Study Gmail</a></li>
+            
+           
         </ul>
     </p>
 </section>
@@ -38,6 +40,7 @@
             <ol>
                     <li><a href="https://sites.google.com/view/sapfioribatch923/extra-credit?authuser=1" target="_blank" title="SAPUI5">SAPUI5</a></li>
                     <!-- <li><a href="https://www.guvi.in/" target="_blank" title="Guivi">Guvi</a></li> -->
+                 <li><a href="https://saurabhverma0609.github.io/myResume/" target="_blank" title="Study Email">Resume</a></li>
                     <li><a href="https://workspace.konfinity.com/users/sign_in" target="_blank" title="konfinity">Konfinity</a></li>
                     <li><a href="https://accounts.simplilearn.com/" target="_blank" title="SimpliLearn">SimpliLearn</a></li>
                     <li><a href="https://www.udemy.com/" target="_blank" title="UDEMEY">UDEMEY-DataStructure</a></li>
