--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
     <p>
             What is to Study.
             <ul>
+               <li><a href="https://classroom.codingninjas.com/app/classroom" target="_blank" title="BootCamp"> Full stack Coding ninJa</a></li>
+              <li><a href="https://www.pirple.com/courses/take/frontend-fundamentals/lessons/5932719-selectors-rules-and-properties" target="_blank" title="BootCamp">PirPle</a></li>
+
               <li><a href="https://online.codingblocks.com/app/dashboard" target="_blank" title="Python">Python </a></li>
-              <li><a href=" https://www.udemy.com/course/automated-testing-with-cypress/learn/lecture/18064875?start=15#overview" target="_blank" title="cyPress">CyPress </a></li>
-              <li><a href="https://frontendmasters.com/bootcamp/" target="_blank" title="BootCamp"> Full stack bootCamp</a></li>
-              <li><a href="https://kodekloud.com/p/learning-path" target="_blank" title="Cloud Computing">Cloud Computing</a></li>
+              <li><a href="https://www.udemy.com/course/advanced-javascript-concepts/learn" target="_blank" title="Advance JavaScript">Andreia JavaScript </a></li>
+               <li><a href="https://kodekloud.com/p/learning-path" target="_blank" title="Cloud Computing">Cloud Computing</a></li>
                            
              
             </ul>
