--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
 <p>
     Daily look these question <a href="pages/Interview.html">Tips of preperation</a>
 </p>
+    <div>
+         <p>
+            <a href="https://www.pirple.com/certificates/8p65yh6pba" target="_blank" title="HTML Certificate">HTML & CSS  </a>
+        </p>
+        
+    </div>  
 
 </footer>
 
